--- a/src/styles/Stylesheet.css
+++ b/src/styles/Stylesheet.css
@@ -41,7 +41,7 @@ body{
     
 }
 .container{
-    background-image: url("../5576_xvpiracicaba-2014.jpg");
+    background-image: url("../assets/images/5576_xvpiracicaba-2014.jpg");
     background-size: cover;
     width: 100%;
     height: 100%;
