done second background

--- a/src/styles/Stylesheet.css
+++ b/src/styles/Stylesheet.css
@@ -137,7 +137,7 @@ h1{
 
 }
 .container-pictures{
-    background-image: url("../5576_xvpiracicaba-2014.jpg");
+    background-image: url("../assets/images/5576_xvpiracicaba-2014.jpg");
     background-size: cover;
   
     
